[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/konsoledistroboxintegration"]

[project]
name = "konsole-distrobox-integration"
version = "0.0.1"

authors = [
  { name="jahinzee", email="jahinzee@outlook.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
    "systemd-python"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: No Input/Output (Daemon)",
  "Environment :: Console",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities"
]

[project.scripts]
konsole-distrobox-integration = "konsoledistroboxintegration:main"